--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1141,34 +1141,26 @@ In the following are reported the results for each grade. More specifically for 
 \subsubsection{Best models}
 \begin{tabular}{|c|c|}
     \hline
-    \textbf{Model} & \textbf{Best parameters} 
-
+    \textbf{Model} & \textbf{Best parameters} \\
     \hline
-    RandomForest Classifier  &  
-
+    RandomForest Classifier  &  \\
     \hline
-    XGBoost Classifier & 
-
+    XGBoost Classifier & \\
     \hline
-    DecisionTree Classifier &  
-
+    DecisionTree Classifier & \\
     \hline
 \end{tabular}
 
 \subsubsection{Accuracy}
 \begin{tabular}{|c|c|}
     \hline
-    \textbf{Model} & \textbf{Accuracy} 
-
+    \textbf{Model} & \textbf{Accuracy} \\ 
     \hline
-    RandomForest Classifier  &  
-
+    RandomForest Classifier  &  \\
     \hline
-    XGBoost Classifier & 
-
+    XGBoost Classifier & \\
     \hline
-    DecisionTree Classifier &  
-
+    DecisionTree Classifier & \\ 
     \hline
 \end{tabular}
 
@@ -1176,33 +1168,26 @@ In the following are reported the results for each grade. More specifically for 
 \subsubsection{Best models}
 \begin{tabular}{|c|c|}
     \hline
-    \textbf{Model} & \textbf{Best parameters} 
-
+    \textbf{Model} & \textbf{Best parameters} \\
     \hline
-    RandomForest Classifier  &  
-
+    RandomForest Classifier  &  \\
     \hline
-    XGBoost Classifier & 
-
+    XGBoost Classifier & \\
     \hline
-    DecisionTree Classifier &  
-
+    DecisionTree Classifier & \\ 
     \hline
 \end{tabular}
 
 \subsubsection{Accuracy}
 \begin{tabular}{|c|c|}
     \hline
-    \textbf{Model} & \textbf{Accuracy} 
-
+    \textbf{Model} & \textbf{Accuracy} \\
     \hline
-    RandomForest Classifier  &  
-
+    RandomForest Classifier  &  \\
     \hline
-    XGBoost Classifier & 
-
+    XGBoost Classifier & \\
     \hline
-    DecisionTree Classifier &  
+    DecisionTree Classifier & \\ 
 
     \hline
 \end{tabular}
@@ -1211,34 +1196,26 @@ In the following are reported the results for each grade. More specifically for 
 \subsubsection{Best models}
 \begin{tabular}{|c|c|}
     \hline
-    \textbf{Model} & \textbf{Best parameters} 
-
+    \textbf{Model} & \textbf{Best parameters} \\
     \hline
-    RandomForest Classifier  &  
-
+    RandomForest Classifier  &  \\
     \hline
-    XGBoost Classifier & 
-
+    XGBoost Classifier & \\
     \hline
-    DecisionTree Classifier &  
-
+    DecisionTree Classifier &  \\
     \hline
 \end{tabular}
 
-\subsubsection{Accuracy}
+\subsubsection{Accuracy} 
 \begin{tabular}{|c|c|}
     \hline
-    \textbf{Model} & \textbf{Accuracy} 
-
+    \textbf{Model} & \textbf{Accuracy} \\ 
     \hline
-    RandomForest Classifier  &  
-
+    RandomForest Classifier  &  \\
     \hline
-    XGBoost Classifier & 
-
+    XGBoost Classifier & \\
     \hline
-    DecisionTree Classifier &  
-
+    DecisionTree Classifier & \\ 
     \hline
 \end{tabular}
 
@@ -1246,34 +1223,26 @@ In the following are reported the results for each grade. More specifically for 
 \subsubsection{Best models}
 \begin{tabular}{|c|c|}
     \hline
-    \textbf{Model} & \textbf{Best parameters} 
-
+    \textbf{Model} & \textbf{Best parameters} \\
     \hline
-    RandomForest Classifier  &  
-
+    RandomForest Classifier  &  \\
     \hline
-    XGBoost Classifier & 
-
+    XGBoost Classifier & \\
     \hline
-    DecisionTree Classifier &  
-
+    DecisionTree Classifier & \\ 
     \hline
 \end{tabular}
 
 \subsubsection{Accuracy}
 \begin{tabular}{|c|c|}
     \hline
-    \textbf{Model} & \textbf{Accuracy} 
-
+    \textbf{Model} & \textbf{Accuracy} \\ 
     \hline
-    RandomForest Classifier  &  
-
+    RandomForest Classifier  &  \\
     \hline
-    XGBoost Classifier & 
-
+    XGBoost Classifier & \\
     \hline
-    DecisionTree Classifier &  
-
+    DecisionTree Classifier & \\ 
     \hline
 \end{tabular}
 
@@ -1281,34 +1250,26 @@ In the following are reported the results for each grade. More specifically for 
 \subsubsection{Best models}
 \begin{tabular}{|c|c|}
     \hline
-    \textbf{Model} & \textbf{Best parameters} 
-
+    \textbf{Model} & \textbf{Best parameters} \\
     \hline
-    RandomForest Classifier  &  
-
+    RandomForest Classifier  &  \\
     \hline
-    XGBoost Classifier & 
-
+    XGBoost Classifier & \\
     \hline
-    DecisionTree Classifier &  
-
+    DecisionTree Classifier & \\ 
     \hline
 \end{tabular}
 
 \subsubsection{Accuracy}
 \begin{tabular}{|c|c|}
     \hline
-    \textbf{Model} & \textbf{Accuracy} 
-
+    \textbf{Model} & \textbf{Accuracy} \\
     \hline
-    RandomForest Classifier  &  
-
+    RandomForest Classifier  &  \\
     \hline
-    XGBoost Classifier & 
-
+    XGBoost Classifier & \\
     \hline
-    DecisionTree Classifier &  
-
+    DecisionTree Classifier & \\ 
     \hline
 \end{tabular}
 
