fix: introduction fixed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -90,15 +90,17 @@ Artificial Intelligence (AI) has experienced an unprecedented surge in prominenc
 
 The concept of bias in AI pertains to the inadvertent or systematic preference shown towards specific groups or characteristics within the data, algorithms, or decision-making processes. This partiality leads to outcomes that are unjust, unfair, and unequal. In this era of AI-driven decision-making, the imperative to address bias is not just a technological challenge but a moral and societal necessity. Additionally, the ethical principle of fairness underscores the collective aspiration to ensure that AI systems yield equitable and just results for all individuals, regardless of their personal attributes.
 
-The repercussions of bias and unfairness in AI systems extend far beyond mere technological concerns. These issues carry profound societal implications, impacting vital areas such as employment, education, and access to critical services. Biased AI systems perpetuate and exacerbate existing inequalities, inadvertently reinforcing harmful stereotypes and undermining the foundational principles of justice and equality. 
+The repercussions of bias and unfairness in AI systems extend far beyond mere technological concerns. These issues carry profound societal implications, impacting vital areas such as employment, education, and access to critical services. Biased AI systems perpetuate and exacerbate existing inequalities, inadvertently reinforcing harmful stereotypes and undermining the foundational principles of justice and equality.
 
-In the realm of education, data-driven decision-making has gained significant ground, with educational institutions increasingly relying on AI systems for tasks ranging from student admissions to evaluating learning outcomes and allocating educational resources. The stakes in this domain are notably high. Ensuring that these AI-driven education systems mitigate bias and prioritize fairness is not just a technological endeavor; it is a moral and societal imperative. 
+In the realm of education, data-driven decision-making has gained significant ground, with educational institutions increasingly relying on AI systems for tasks ranging from student admissions to evaluating learning outcomes and allocating educational resources. The stakes in this domain are notably high. Ensuring that these AI-driven education systems mitigate bias and prioritize fairness is not just a technological endeavor; it is a moral and societal imperative.
 
-This work introduces a comprehensive Fair-by-Design workflow, meticulously detailed in the \textbf{Contribution} chapter. The crux of this workflow is its unique ability to integrate fairness considerations right from the inception of AI system design. In this thesis, we rigorously explore and implement three distinct and promising approaches to ensure fairness, together with the well-known \emph{fairness through unawareness} approach, with the goal to compare the accuracy derived by the application of each approach with the usual scenario in which fairness assumptions are not made. 
+The Fair-by-Design workflow presented extends the traditional machine learning workflow by explicitly incorporating fairness considerations from the outset of AI system design. This approach aims to proactively address and mitigate bias throughout the development process, ensuring fairness is not an afterthought but an integral part of the system's foundation.
 
-These approaches are seamlessly integrated into the workflow, facilitating a comprehensive and unbiased comparison of their effectiveness in mitigating bias. 
+This work proposes the Fair-by-Design workflow, offering multiple solutions to address fairness challenges within AI systems. We explore and implement three distinct approaches within this workflow, each contributing to the overarching goal of fostering fairness in AI.
 
-The structure of this thesis unfolds as follows: The \textbf{State of the Art} chapter conducts a thorough review of the existing approaches and methodologies designed to address bias and promote fairness in the development of AI systems. This chapter lays the groundwork upon which our innovative Fair-by-Design workflow is built. The \textbf{Contribution} chapter delves into the intricacies of the workflow, elucidating the seamless integration of various fairness approaches into the design process. The \textbf{Validation} chapter meticulously presents the results derived from the application of these fairness approaches, offering an empirical comparison of their performance and effectiveness. Finally, the \textbf{Conclusion} chapter not only imparts insights gleaned from our research but also outlines prospective directions for further advancements in this critical and ever-evolving field.
+The objective is to compare not only the accuracy but also the value of specific fairness metrics at the conclusion of the workflow. By contrasting these outcomes with a scenario where fairness assumptions are not made, we aim to provide a comprehensive assessment of both accuracy and fairness within the proposed framework.
+
+The structure of this thesis unfolds as follows: The \ref{background} chapter conducts a thorough review of the existing approaches and methodologies designed to address bias and promote fairness in the development of AI systems. This chapter lays the groundwork upon which our innovative Fair-by-Design workflow is built. The \ref{contribution} chapter delves into the intricacies of the workflow, elucidating the seamless integration of various fairness approaches into the design process. The \ref{validation} chapter meticulously presents the results derived from the application of these fairness approaches, offering an empirical comparison of their performance and effectiveness. Finally, the \ref{conclusions} chapter not only imparts insights gleaned from our research but also outlines prospective directions for further advancements in this critical and ever-evolving field.
 
 %----------------------------------------------------------------------------------------
 \chapter{State of the Art} % or Background
@@ -383,7 +385,7 @@ In conclusion, fairness in AI is not just an ethical necessity but a fundamental
 
 %----------------------------------------------------------------------------------------
 \chapter{Contribution} % possible chapter for Projects
-\label{chap:contibution}
+\label{chap:contribution}
 %----------------------------------------------------------------------------------------
 \section{Introduction to the Fair-by-Design Workflow}
 The following chapter unveils the core of the research—an innovative Fair-by-Design workflow meticulously crafted to address the pressing issue of bias mitigation within AI systems. It is important to note that, among all the techniques presented in the "State of the Art" chapter, this workflow primarily focuses on the concepts of pre-processing techniques for bias mitigation. 
