fix: fixed introduction

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -100,7 +100,7 @@ This work proposes the Fair-by-Design workflow, offering multiple solutions to a
 
 The objective is to compare not only the accuracy but also the value of specific fairness metrics at the conclusion of the workflow. By contrasting these outcomes with a scenario where fairness assumptions are not made, we aim to provide a comprehensive assessment of both accuracy and fairness within the proposed framework.
 
-The structure of this thesis unfolds as follows: The \ref{background} chapter conducts a thorough review of the existing approaches and methodologies designed to address bias and promote fairness in the development of AI systems. This chapter lays the groundwork upon which our innovative Fair-by-Design workflow is built. The \ref{contribution} chapter delves into the intricacies of the workflow, elucidating the seamless integration of various fairness approaches into the design process. The \ref{validation} chapter meticulously presents the results derived from the application of these fairness approaches, offering an empirical comparison of their performance and effectiveness. Finally, the \ref{conclusions} chapter not only imparts insights gleaned from our research but also outlines prospective directions for further advancements in this critical and ever-evolving field.
+The structure of this thesis unfolds as follows: The \cref{background} chapter conducts a thorough review of the existing approaches and methodologies designed to address bias and promote fairness in the development of AI systems. This chapter lays the groundwork upon which our innovative Fair-by-Design workflow is built. The \cref{contribution} chapter delves into the intricacies of the workflow, elucidating the seamless integration of various fairness approaches into the design process. The \cref{validation} chapter meticulously presents the results derived from the application of these fairness approaches, offering an empirical comparison of their performance and effectiveness. Finally, the \cref{conclusions} chapter not only imparts insights gleaned from our research but also outlines prospective directions for further advancements in this critical and ever-evolving field.
 
 %----------------------------------------------------------------------------------------
 \chapter{State of the Art} % or Background
